--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,12 @@ body {
   h1 {
     color: chocolate;
     font-family:"Courier New", Arial, Helvetica ;
-    font-size: 30px ;
+    font-size: 35px ;
+  }
+  h2 {
+    color: chocolate;
+    font-family:"Courier New", Arial, Helvetica ;
+    font-size: 25px ;
   }
   p {
     color: chocolate;
