--- a/Style.css
+++ b/Style.css
@@ -5,6 +5,7 @@ body {
     color: chocolate;
     font-family:"Courier New", Arial, Helvetica ;
     font-size: 35px ;
+    padding: 5px;
   }
   h2 {
     color: chocolate;
@@ -15,6 +16,8 @@ body {
     color: chocolate;
     font-family:"Courier New", Arial, Helvetica ;
     font-size: 20px ;
+    padding: 5px;
+    line-height: 1.2;
   }
   a:link {
     color: chocolate;
