--- a/Style.css
+++ b/Style.css
@@ -22,7 +22,7 @@ body {
   } 
   p {
     color: chocolate;
-    font-family:"Courier New", Arial, Helvetica ;
+    font-family:Garamond, Arial, Helvetica ;
     font-size: 16px ;
     padding: 5px;
     line-height: 1.2;
@@ -46,6 +46,6 @@ a:hover {
 table, th, td {
   color: chocolate;
   width: 80%;
-  font-family:"Courier New", Arial, Helvetica ;
+  font-family:Garamond, Arial, Helvetica ;
   border:1px solid chocolate;
 }
