--- a/Style.css
+++ b/Style.css
@@ -3,49 +3,56 @@ body {
   }
   h1 {
     color: chocolate;
-    font-family:"Courier New", Arial, Helvetica ;
-    font-size: 30px ;
+    font-family:"Courier New", Arial, Helvetica;
+    font-size: 28px;
     padding: 5px;
   }
   h2 {
     color: chocolate;
-    font-family:"Courier New", Arial, Helvetica ;
-    font-size: 23px ;
+    font-family:"Courier New", Arial, Helvetica;
+    font-size: 24px;
     padding: 5px;
   }
   h3 {
     color: chocolate;
     font-family:"Courier New", Arial, Helvetica ;
-    font-size: 18px;
+    font-size: 20px;
     padding: 5px;
 
   } 
   p {
     color: chocolate;
     font-family:Garamond, Arial, Helvetica ;
-    font-size: 16px ;
+    font-size: 16px;
     padding: 5px;
-    line-height: 1.2;
+    line-height: 1.3;
   }
   a:link {
     color: chocolate;
     text-decoration: none;
-    font-family:"Courier New", Arial, Helvetica ; 
-    padding-right: 10px ;
+    font-family:"Courier New", Arial, Helvetica; 
+    font-size: 16px;
+    padding-right: 10px;
+    padding-left: 5px;
   }
   a:visited {
     color: chocolate;
     text-decoration: none;
-    font-family:"Courier New", Arial, Helvetica ;
+    font-family:"Courier New", Arial, Helvetica;
+    padding-right: 10px;
+    padding-left: 5px;
   }
 a:hover {
   color: red;
-  font-family:"Courier New", Arial, Helvetica ;
+  font-family:"Courier New", Arial, Helvetica;
+  padding-right: 10px;
+  padding-left: 5px;
 }
 
 table, th, td {
   color: chocolate;
   width: 80%;
-  font-family:Garamond, Arial, Helvetica ;
+  font-family:Garamond, Arial, Helvetica;
   border:1px solid chocolate;
+  padding: 5px;
 }
