--- a/Style.css
+++ b/Style.css
@@ -1,34 +1,34 @@
 body {
-    background-color: seashell;
+    background-color: #ede7d9;
   }
   h1 {
-    color: chocolate;
+    color: #93032e;
     font-family:"Courier New", Arial, Helvetica;
     font-size: 28px;
     padding: 5px;
   }
   h2 {
-    color: chocolate;
+    color: #93032e;
     font-family:"Courier New", Arial, Helvetica;
     font-size: 24px;
     padding: 5px;
   }
   h3 {
-    color: chocolate;
+    color: #93032e;
     font-family:"Courier New", Arial, Helvetica ;
     font-size: 20px;
     padding: 5px;
 
   } 
   p {
-    color: chocolate;
+    color: #e36414;
     font-family:Garamond, Arial, Helvetica ;
     font-size: 16px;
     padding: 5px;
     line-height: 1.3;
   }
   a:link {
-    color: chocolate;
+    color: #e36414;
     text-decoration: none;
     font-family:"Courier New", Arial, Helvetica; 
     font-size: 16px;
@@ -36,23 +36,61 @@ body {
     padding-left: 5px;
   }
   a:visited {
-    color: chocolate;
+    color: #e36414;
     text-decoration: none;
     font-family:"Courier New", Arial, Helvetica;
     padding-right: 10px;
     padding-left: 5px;
   }
 a:hover {
-  color: red;
+  color: #93032e;
   font-family:"Courier New", Arial, Helvetica;
   padding-right: 10px;
   padding-left: 5px;
 }
 
 table, th, td {
-  color: chocolate;
+  color: #e36414;
   width: 80%;
   font-family:Garamond, Arial, Helvetica;
-  border:1px solid chocolate;
+  border:1px solid #e36414;
   padding: 5px;
+}
+
+.button-52 {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-52:after {
+  content: "";
+  background-color:#fb8b24;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.button-52:hover:after {
+  top: 0px;
+  left: 0px;
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: 13px 50px 13px;
+  }
 }
