--- a/Style.css
+++ b/Style.css
@@ -57,6 +57,13 @@ table, th, td {
   padding: 5px;
 }
 
+.navigation {
+  background-color: #fb8b24;
+  padding: 12px;
+  
+}
+
+
 .button-52 {
   font-size: 16px;
   font-weight: 200;
