--- a/style.css
+++ b/style.css
@@ -1,70 +1,72 @@
 body {
-    background-color: #ede7d9;
-  }
-  h1 {
-    color: #93032e;
-    font-family:"Courier New", Arial, Helvetica;
-    font-size: 28px;
-    padding: 7px;
-  }
-  h2 {
-    color: #93032e;
-    font-family:"Courier New", Arial, Helvetica;
-    font-size: 24px;
-    padding: 7px;
-  }
-  h3 {
-    color: #93032e;
-    font-family:"Courier New", Arial, Helvetica ;
-    font-size: 20px;
-    padding: 7px;
-
-  } 
-  p {
-    color: #e36414;
-    font-family:Garamond, Arial, Helvetica ;
-    font-size: 16px;
-    padding: 7px;
-    line-height: 1.3;
-  }
-  a:link {
-    color: #e36414;
-    text-decoration: none;
-    font-family:"Courier New", Arial, Helvetica; 
-    font-size: 16px;
-    padding-right: 7px;
-    padding-left: 7px;
-    
-  }
-  a:visited {
-    color: #e36414;
-    text-decoration: none;
-    font-family:"Courier New", Arial, Helvetica;
-    padding-right: 7px;
-    padding-left: 7px;
-    
-  }
-a:hover {
+  background-color: #ede7d9;
+  padding-bottom: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+h1 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica;
+  font-size: 28px;
+  padding: 7px;
+}
+h2 {
+  color: #93032e;
+  font-family:"Courier New", Arial, Helvetica;
+  font-size: 24px;
+  padding: 7px;
+}
+h3 {
+  color: #93032e;
+  font-family:"Courier New", Arial, Helvetica ;
+  font-size: 20px;
+  padding: 7px;
+} 
+h4 {
+  color: #93032e;
+  font-family:"Courier New", Arial, Helvetica ;
+  font-size: 16px;
+  padding: 7px;
+} 
+p {
+  color: #EA7F1B;
+  font-family:Garamond, Arial, Helvetica;
+  font-size: 16px;
+  padding: 7px;
+  line-height: 1.3;
+}
+a:link {
+  color: #EA7F1B;
+  text-decoration: none;
+  font-family: 'Gruppo', sans-serif; 
+  font-size: 20px;
+  padding-right: 7px;
+  padding-left: 7px;    
+}
+a:visited {
+  color: #EA7F1B;
+  text-decoration: none;
+  font-family: 'Gruppo', sans-serif;
+  padding-right: 7px;
+  padding-left: 7px;   
+}
+a:hover {
+  color: #93032e;
+  font-family: 'Gruppo', sans-serif;
   padding-right: 7px;
   padding-left: 7px;
 }
-
 table, th, td {
-  color: #e36414;
+  color: #EA7F1B;
   width: 80%;
   font-family:Garamond, Arial, Helvetica;
   border:1px solid #e36414;
   padding: 7px;
 }
-
 .navigation {
-  background-color: #fb8b24;
+  background-color: #EA7F1B;
   padding: 12px;
-  
 }
-
 .button-52 {
   font-size: 16px;
   font-weight: 200;
@@ -80,10 +82,9 @@ table, th, td {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
-
 .button-52:after {
   content: "";
-  background-color:#fb8b24;
+  background-color:#EA7F1B;
   width: 100%;
   z-index: -1;
   position: absolute;
@@ -92,20 +93,15 @@ table, th, td {
   left: 7px;
   transition: 0.2s;
 }
-
 .button-52:hover:after {
   top: 0px;
   left: 0px;
 }
-
 @media (min-width: 768px) {
   .button-52 {
-    padding: 13px 50px 13px;
+  padding: 13px 50px 13px;
   }
 }
-
 img, h1 {
   display: inline-block;
 }
-
-
