--- a/style.css
+++ b/style.css
@@ -4,30 +4,28 @@ body {
   padding-left: 5px;
   padding-right: 5px;
 }
+
 h1 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica;
-  font-size: 28px;
   padding: 7px;
 }
 h2 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica;
-  font-size: 24px;
   padding: 7px;
 }
 h3 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica ;
-  font-size: 20px;
   padding: 7px;
 } 
 h4 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica ;
-  font-size: 16px;
   padding: 7px;
-} 
+}
+
 p {
   color: #EA7F1B;
   font-family:Garamond, Arial, Helvetica;
@@ -35,6 +33,7 @@ p {
   padding: 7px;
   line-height: 1.3;
 }
+
 a:link {
   color: #EA7F1B;
   text-decoration: none;
@@ -56,6 +55,7 @@ a:hover {
   padding-right: 7px;
   padding-left: 7px;
 }
+
 table, th, td {
   color: #EA7F1B;
   width: 80%;
@@ -63,10 +63,12 @@ table, th, td {
   border:1px solid #e36414;
   padding: 7px;
 }
+
 .navigation {
   background-color: #EA7F1B;
   padding: 12px;
 }
+
 .button-52 {
   font-size: 16px;
   font-weight: 200;
@@ -102,6 +104,29 @@ table, th, td {
   padding: 13px 50px 13px;
   }
 }
+
 img, h1 {
   display: inline-block;
 }
+
+@media only screen and (max-width:420px) {
+  h1{ font-size: 24px;  
+  }
+  h2 { font-size: 20px;
+  }
+  h3 {font-size: 16px;
+  }
+  h4 {font-size: 16px;
+  }
+  }
+
+@media only screen and (min-width:421px){
+  h1 { font-size: 28px; 
+  } 
+  h2 {font-size: 24px;
+  }
+  h3 {font-size: 20px;
+  }
+  h4 {font-size: 16px;
+  }
+  }
