--- a/style.css
+++ b/style.css
@@ -129,4 +129,14 @@ img, h1 {
   }
   h4 {font-size: 16px;
   }
+  * {
+    box-sizing: border-box;
+  }
+  .rivi {
+    display: flex;
+  }
+  .sarake {
+    flex: 50%;
+    padding: 10px;
+  }
   }
