--- a/style.css
+++ b/style.css
@@ -109,10 +109,10 @@ img, h1 {
   display: inline-block;
 }
 
-@media only screen and (max-width:420px) {
-  h1{ font-size: 24px;  
+@media only screen and (max-width:4020px) {
+  h1 {font-size: 24px;  
   }
-  h2 { font-size: 20px;
+  h2 {font-size: 20px;
   }
   h3 {font-size: 16px;
   }
@@ -120,8 +120,20 @@ img, h1 {
   }
   }
 
-@media only screen and (min-width:421px){
-  h1 { font-size: 28px; 
+@media only screen and (min-width: 421px) and
+  (max-width: 1023px){
+  h1 {font-size: 28px; 
+  } 
+  h2 {font-size: 24px;
+  }
+  h3 {font-size: 20px;
+  }
+  h4 {font-size: 16px;
+  }
+  }
+
+@media only screen and (min-width:1024px){
+  h1 {font-size: 28px; 
   } 
   h2 {font-size: 24px;
   }
@@ -134,9 +146,11 @@ img, h1 {
   }
   .rivi {
     display: flex;
+    margin-top: 0px;
   }
   .sarake {
     flex: 50%;
     padding: 10px;
+    margin-top: 0px;
   }
   }
