--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica;
   padding: 7px;
+  margin-bottom: 0px;
 }
 h2 {
   color: #93032e;
@@ -19,9 +20,10 @@ h3 {
   color: #93032e;
   font-family:"Courier New", Arial, Helvetica ;
   padding: 7px;
+  margin-bottom: 0px;
 } 
 h4 {
-  color: #93032e;
+  color: #EA7F1B;
   font-family:"Courier New", Arial, Helvetica ;
   padding: 7px;
 }
@@ -29,7 +31,6 @@ h4 {
 p {
   color: #EA7F1B;
   font-family:Garamond, Arial, Helvetica;
-  font-size: 16px;
   padding: 7px;
   line-height: 1.3;
 }
@@ -118,7 +119,9 @@ img, h1 {
   }
   h4 {font-size: 16px;
   }
+  p{font-size: 16px;
   }
+}
 
 @media only screen and (min-width: 421px) and
   (max-width: 1023px){
@@ -130,7 +133,9 @@ img, h1 {
   }
   h4 {font-size: 16px;
   }
+  p{font-size: 16px;
   }
+}
 
 @media only screen and (min-width:1024px){
   h1 {font-size: 28px; 
@@ -140,6 +145,8 @@ img, h1 {
   h3 {font-size: 20px;
   }
   h4 {font-size: 16px;
+  }
+  p{font-size: 18px;
   }
   * {
     box-sizing: border-box;
@@ -153,4 +160,4 @@ img, h1 {
     padding: 10px;
     margin-top: 0px;
   }
-  }
+}
