--- a/style.css
+++ b/style.css
@@ -122,6 +122,9 @@ img, h1 {
   }
   p{font-size: 16px;
   }
+  .navigation {
+    font-size: 19px;
+  }
 }
 
 @media only screen and (min-width: 421px) and
@@ -135,6 +138,9 @@ img, h1 {
   h4 {font-size: 16px;
   }
   p{font-size: 16px;
+  }
+  .navigation {
+    font-size: 22px;
   }
 }
 
@@ -160,5 +166,8 @@ img, h1 {
     flex: 50%;
     padding: 10px;
     margin-top: 0px;
+  }
+  .navigation {
+    font-size: 24px;
   }
 }
