--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ img, h1 {
   }
   p{font-size: 18px;
   }
+
   * {
     box-sizing: border-box;
   }
@@ -161,4 +162,17 @@ img, h1 {
     padding: 10px;
     margin-top: 0px;
   }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.eturivi {
+  display: flex;
+}
+
+.etusarake {
+  flex: 33.33%;
+  padding: 7px;
 }
